<resources>
  <string name="action_example">Example action</string>
  <string name="action_settings">Settings</string>
  <string name="action_donate">Support development</string>
  <string name="no_gist_description">No description</string>
  <string name="navigation_gists">Gists</string>
  <string name="navigation_my_gists">My gists</string>
  <string name="username_gists">%1$s gists</string>
  <string name="navigation_gists_starred">Starred gists</string>
  <string name="title_profile">Profile</string>
  <string name="title_gists">Gists</string>
  <string name="navigation_profile">Profile</string>
  <string name="login_username">Username</string>
  <string name="login_password">Password</string>
  <string name="login_button">Login</string>
  <string name="public_repos">Repositories</string>
  <string name="public_gists">Gists</string>
  <string name="tab_repos_parent">Repositories</string>
  <string name="repos_num">%d Repositories</string>
  <string name="gists_num">%d Gists</string>
  <string name="orgs_num">%d Organizations</string>
  <string name="orgs_num_empty">Organizations</string>
  <string name="private_gists_num">%d Private gists</string>
  <string name="collaborators_num">%d Collaborators</string>
  <string name="one_collaborator_num">%d Collaborator</string>
  <string name="navigation_repos">Yours</string>
  <string name="navigation_watched_repos">Watched</string>
  <string name="navigation_starred_repos">Starred</string>
  <string name="tab_people_parent">People &#038; Organizations</string>
  <string name="navigation_following">Following</string>
  <string name="navigation_followers">Followers</string>
  <string name="title_followers">Followers</string>
  <string name="title_following">Following</string>
  <string name="title_repos">Repos</string>
  <string name="unauthorized">Unauthorized access for %s</string>
  <string name="readme">Readme</string>
  <string name="source">Source</string>
  <string name="issues">Issues</string>
  <string name="info">info</string>
  <string name="no_followers">There aren\'t any followers</string>
  <string name="no_followings">There isn\'t anyone you follow</string>
  <string name="no_repositories">No repositories found</string>
  <string name="no_watched_repositories">No watched repositories found</string>
  <string name="no_starred_repositories">No starred repositories found</string>
  <string name="no_member_repositories">No membership repositories found</string>
  <string name="action_share_repo">Share</string>
  <string name="show_parent">Show parent</string>
  <string name="menu_star">Star</string>
  <string name="menu_unstar">Unstar</string>
  <string name="menu_watch">Watch</string>
  <string name="menu_unwatch">Unwatch</string>
  <string name="menu_copy">Copy</string>
  <string name="menu_share">Share</string>
  <string name="search">Search</string>
  <string name="branches">Branches</string>
  <string name="fork_of">fork of %1$s</string>
  <string name="error_loading_repo_detail">Sorry</string>
  <string name="error_loading_repo_detail_message">It seems this repo is unable to be loaded.</string>
  <string name="cancel">Cancel</string>
  <string name="retry">Retry</string>
  <string name="no_results">No results</string>
  <string name="issue_created_by"><![CDATA[Created by <b>%1$s</b>]]></string>
  <string name="title_activity_new_issue">New issue</string>
  <string name="hello_world">Hello world!</string>
  <string name="title">Title</string>
  <string name="leave_a_comment">Leave a comment</string>
  <string name="milestone">Milestone</string>
  <string name="milestones">Milestones</string>
  <string name="assignee">Assignee</string>
  <string name="labels_title">Labels</string>
  <string name="labels">Labels, separated with comma</string>
  <string name="issue_title_mandatory">Title is mandatory</string>
  <string name="action_send_issue">Send issue</string>
  <string name="create_issue_error">Error creating issue</string>
  <string name="no_issues_found">No issues found</string>
  <string name="title_activity_issue_detail">IssueDetailActivity</string>
  <string name="discussion">discussion</string>
  <string name="issue_detail_title"><![CDATA[Issue <b>#%1$d</b>]]></string>
  <string name="no_comments">No comments</string>
  <string name="addComment">Add comment</string>
  <string name="closeIssue">Close issue</string>
  <string name="closePullRequest">Close pull request</string>
  <string name="reopenIssue">Reopen issue</string>
  <string name="reopenPullrequst">Reopen pull request</string>
  <string name="accept">Accept</string>
  <string name="row_private_repo">PRIVATE</string>
  <string name="tab_user_parent">User</string>
  <string name="menu_organizations">Organizations</string>
  <string name="no_organizations">There aren\'t any organizations</string>
  <string name="title_activity_comment_issue">CommentIssueActivity</string>
  <string name="add_comment">Add comment</string>
  <string name="no_commits">No commits here</string>
  <string name="commits">Commits</string>
  <string name="acces_token_request">Requesting user token</string>
  <string name="title_activity_settings">Settings</string>
  <string name="pref_gthub_link_interceptor">Intercept links</string>
  <string name="error_loading_image">Image cannot be loaded</string>
  <string name="action_menu">Menu</string>
  <string name="unknown_language">Unknown</string>
  <string name="pref_repos_sor_order">Repositories sort order</string>
  <string name="menu_repo_settings">Repository settings</string>
  <string name="description">Description</string>
  <string name="repo_check_private">Private</string>
  <string name="repo_check_issue">Has issues</string>
  <string name="repo_check_wiki">Has wiki</string>
  <string name="repo_check_downloads">Downloads</string>
  <string name="noevents">No events</string>
  <string name="menu_events">Events</string>
  <string name="pushed">Pushed</string>
  <string name="watched">Watched</string>
  <string name="created">Created</string>
  <string name="issue_commented">Issue comment</string>
  <string name="commit_commented">Commit comment</string>
  <string name="forked">Forked</string>
  <string name="add_gitignore">Add GitIgnore</string>
  <string name="add_license">Add license</string>
  <string name="no_gitignore_template">No gitignore</string>
  <string name="follow">Follow</string>
  <string name="joined_at">Joined at %s</string>
  <string name="created_at">Created at %s</string>
  <string name="at_date_format">dd MMM yyyy</string>
  <string name="public_data">Public data</string>
  <string name="plan_data">Plan</string>
  <string name="title_activity_repos">%s repositories</string>
  <string name="title_activity_repos_starred">%s starred repositories</string>
  <string name="title_activity_repos_watched">%s watched repositories</string>
  <string name="title_activity_orgs">%s organizations</string>
  <string name="navigation_settings">Settings</string>
  <string name="navigation_about">About</string>
  <string name="menu_my_profile">My profile</string>
  <string name="markdown_fragment_title">Readme</string>
  <string name="issues_fragment_title">Issues</string>
  <string name="files_fragment_title">Source</string>
  <string name="commits_fragment_title">Commits</string>
  <string name="source_download_notification">Source code from %1$s was queued</string>
  <string name="source_download_notification_finished">Source code from %1$s was downloaded</string>
  <string name="pref_repos_download_type">Download file extension</string>
  <string name="pref_screen_item">Select default screen</string>
  <string name="title_activity_commits">Commits</string>
  <string name="title_activity_commit_detail"># %s</string>
  <string name="commit_authored_at_years">%1$s authored %2$d years ago</string>
  <string name="commit_authored_at_months">%1$s authored %2$d month ago</string>
  <string name="commit_authored_at_days">%1$s authored %2$d days ago</string>
  <string name="commit_authored_at_hours">%1$s authored %2$d hours ago</string>
  <string name="commit_authored_at_minutes">%1$s authored %2$d minutes ago</string>
  <string name="commit_authored_at_seconds">%1$s authored %2$d seconds ago</string>
  <string name="commit_authored_at_now">%1$s authored %2$d just now</string>
  <string name="time_ago_at_years">%d years ago</string>
  <string name="time_ago_at_months">%d month ago</string>
  <string name="time_ago_at_days">%d days ago</string>
  <string name="time_ago_at_hours">%d hours ago</string>
  <string name="time_ago_at_minutes">%d minutes ago</string>
  <string name="time_ago_at_seconds">%d seconds ago</string>
  <string name="commit_additions">Additions %d</string>
  <string name="commit_deletions">Deletions %d</string>
  <string name="unfollow">Unfollow</string>
  <string name="fold_issue">Fold issue detail</string>
  <string name="unfold_issue">Unfold issue detail</string>
  <string name="quota_data">%s quota</string>
  <string name="collaborators_data">%d collaborators</string>
  <string name="repos_data_profile">Using %1$d of %2$d private repositories.</string>
  <string name="about_title">About</string>
  <string name="pull_requests_subtitle">PullRequest on %s</string>
  <string name="issue_subtitle">Issue on %s</string>
  <string name="no_prs_found">No pull requests found</string>
  <string name="action_search">Search</string>
  <string name="search_hint">Search</string>
  <string name="loading_token">Loading token</string>
  <string name="loading_user">Loading user</string>
  <string name="navigation_general_repositories">Repositories</string>
  <string name="navigation_people">People</string>
  <string name="code_download">Source code is queued for download</string>
  <string name="action_notifications">Notifications</string>
  <string name="no_notifications">No notifications</string>
  <string name="notifications">Notifications</string>
  <string name="repo_scope_title">Update authorization</string>
  <string name="repo_scope_message">We need you to reauthorize due to some changes on the API.\n\nBy reauthorizing the app you\'ll also have access to new features</string>
  <string name="repo_scope_positive">OK reauthorize</string>
  <string name="navigation_orgs_repos">Repositories</string>
  <string name="navigation_orgs_members">Members</string>
  <string name="org_no_members">No members</string>
  <string name="issue_edit_milestone">Set milestone</string>
  <string name="action_share_issue">Share issue</string>
  <string name="issue_edit_assignee">Assign to</string>
  <string name="issue_edit_labels">Set labels</string>
  <string name="content_editor_emojis">Emoji</string>
  <string name="content_editor_picture">Picture</string>
  <string name="content_editor_source">Source</string>
  <string name="pref_repo_manage_title">Title</string>
  <string name="pref_repo_manage_description">Description</string>
  <string name="pref_repo_default_branch">Default branch</string>
  <string name="pref_repo_has_issues">Enable issues</string>
  <string name="pref_repo_has_wiki">Enable wiki</string>
  <string name="pref_repo_has_downloads">Enable downloads</string>
  <string name="pref_repo_manage_homepage">Homepage URL</string>
  <string name="pref_repo_manage_title_summary">Tap to change title</string>
  <string name="pref_repo_manage_description_summary">Tap to change description</string>
  <string name="pref_repo_manage_homepage_summary">Tap to change homepage</string>
  <string name="pref_repo_default_branch_summary">Tap to change default branch</string>
  <string name="pref_repo_delete">Delete repository</string>
  <string name="pref_repo_delete_repository">Once you delete a repository, there is no going back.</string>
  <string name="action_add_shortcut">Add desktop shortcut</string>
  <string name="pref_repo_manage_gitignore">Add .gitignore</string>
  <string name="pref_repo_auto_init">Create README.md</string>
  <string name="login_token">Token</string>
</resources>