<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
      android:key="pref_repo_name"
      android:title="@string/pref_repo_manage_title"
      android:summary="@string/pref_repo_manage_title_summary"
      />

  <Preference
      android:key="pref_repo_description"
      android:title="@string/pref_repo_manage_description"
      android:summary="@string/pref_repo_manage_description_summary"
      />

  <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
      android:key="pref_repo_url"
      android:title="@string/pref_repo_manage_homepage"
      android:summary="@string/pref_repo_manage_homepage_summary"
      />

  <CheckBoxPreference
      android:key="pref_repo_has_issues"
      android:title="@string/pref_repo_has_issues"
      />

  <CheckBoxPreference
      android:key="pref_repo_has_wiki"
      android:title="@string/pref_repo_has_wiki"
      />

  <CheckBoxPreference
      android:key="pref_repo_has_downloads"
      android:title="@string/pref_repo_has_downloads"
      />

  <!--<CheckBoxPreference-->
  <!--android:key="pref_repo_is_private"-->
  <!--android:title="@string/pref_repo_is_private" />-->

  <com.afollestad.materialdialogs.prefs.MaterialListPreference
      android:key="pref_repo_default_branch"
      android:title="@string/pref_repo_default_branch"
      android:summary="@string/pref_repo_default_branch_summary"
      />

  <Preference
      android:key="pref_repo_delete"
      android:title="@string/pref_repo_delete"
      android:summary="@string/pref_repo_delete_repository"
      />

</PreferenceScreen>