<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_repo"
        android:title="@string/action_share_repo"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/show_parent"
        android:id="@+id/action_show_parent"
        app:showAsAction="never" />
    <item
        android:title="@string/menu_star"
        android:id="@+id/action_star"
        app:showAsAction="never"
        android:orderInCategory="10"/>
    <item
        android:title="@string/menu_watch"
        android:id="@+id/action_watch"
        app:showAsAction="never"
        android:orderInCategory="11" />
    <item
        android:title="@string/menu_repo_settings"
        android:id="@+id/action_repo_settigs"
        app:showAsAction="never"
        android:orderInCategory="12" />

</menu>