<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alorma.github.ui.activity.NewIssueActivity"
    android:orientation="vertical">

    <EditText
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:lines="5"
        android:hint="@string/leave_a_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gapLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/gapLarge"
        android:id="@+id/pushAccessLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assignee"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/gapLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/milestone"
            android:layout_marginTop="@dimen/gapLarge" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/gapLarge" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/labels"
            android:layout_marginTop="@dimen/gapLarge" />
    </LinearLayout>

</LinearLayout>
