<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary">

        <com.alorma.github.ui.view.TabTitle
            android:id="@+id/tab1"
            android:text="@string/navigation_repos"
            style="@style/tab_repos"
            app:barColor="?attr/colorAccent"/>

        <com.alorma.github.ui.view.TabTitle
            android:id="@+id/tab2"
            android:text="@string/navigation_watched_repos"
            style="@style/tab_repos"
            app:barColor="?attr/colorAccent" />

        <com.alorma.github.ui.view.TabTitle
            android:id="@+id/tab3"
            android:text="@string/navigation_starred_repos"
            style="@style/tab_repos"
            app:barColor="?attr/colorAccent"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content" />
</LinearLayout>