<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.activity.WelcomeActivity"
    >

  <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:id="@id/toolbar"
                                     android:layout_width="match_parent"
                                     android:layout_height="240dp"
                                     android:background="?colorPrimary"
                                     app:contentInsetStart="@dimen/second_keyline"
                                     app:popupTheme="@style/Toolbar.Popup.AppCompat"
                                     app:theme="@style/Toolbar.AppCompat.Responsive"
      />

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="80dp"
      android:layout_marginLeft="@dimen/gapXLarge"
      android:layout_marginRight="@dimen/gapXLarge"
      android:layout_marginTop="100dp"
      android:paddingBottom="0dp"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/gapXLarge"
        android:orientation="vertical"
        >

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="?actionBarSize"
          android:id="@+id/login_username"
          >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            >
          <requestFocus/>
        </EditText>

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/login_token"
          >

        <com.maksim88.passwordedittext.PasswordEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_token"
            />

      </android.support.design.widget.TextInputLayout>

      <Button
          android:id="@+id/openLogin"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/login_button"
          />
    </LinearLayout>
  </android.support.v7.widget.CardView>

</FrameLayout>
